deployments/lsst-the-docs/resources/keeper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keeper
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - keeper.lsst.codes
      secretName: keeper-ingress-tls
  rules:
    - host: keeper.lsst.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keeper
                port:
                  number: 8080
